// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProvaParallelOvervewView /> visualizza il componente per assegnata = false, ritirata = false 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/homepage",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Prova Parallel"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <EsecuzioneOverview
      eseguiSimulaFx={[Function]}
      isAssegnata={false}
      isDocente={true}
      isRitirata={false}
      previewFx={[Function]}
      tempoEsecuzione={12}
      testo="testo"
      titolo="titolo"
      totaleDomande={12}
    />
  </Container>
</Page>
`;

exports[`<ProvaParallelOvervewView /> visualizza il componente per feedback.hasFeedback = true 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/homepage",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Prova Parallel"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <AlertBanner
      actioncolor="tipologia"
      theme={
        Object {
          "brand": "#00BBEF",
          "radius": Object {
            "general": "6px",
          },
        }
      }
    >
      messaggio
    </AlertBanner>
  </Container>
</Page>
`;

exports[`<ProvaParallelOvervewView /> visualizza il componente per spinner = true 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/homepage",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Prova Parallel"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <Spinner
      number={3}
    />
  </Container>
</Page>
`;
